--- a/trabalho pp1/trabalho pp1.vcxproj
+++ b/trabalho pp1/trabalho pp1.vcxproj
@@ -139,13 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="File.C" />
     <ClCompile Include="ll.c" />
     <ClCompile Include="Main.c" />
     <ClCompile Include="Logica.c" />
     <ClCompile Include="Examples.c" />
     <ClCompile Include="Examples.h" />
     <ClCompile Include="File.h" />
+    <ClCompile Include="File.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Logica.h" />
