--- a/trabalho pp1/trabalho pp1.vcxproj
+++ b/trabalho pp1/trabalho pp1.vcxproj
@@ -151,6 +151,9 @@
     <ClInclude Include="Logica.h" />
     <ClInclude Include="ll.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="PP1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
