--- a/trabalho pp1/trabalho pp1.vcxproj.filters
+++ b/trabalho pp1/trabalho pp1.vcxproj.filters
@@ -45,4 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="PP1.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
